--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,15 @@ div.image-3 {
     background-image: url("assets/beersOnTap@2x.jpg");
 }
 
+div.image-4 {
+    background-image: url("assets/parma.jpg");
+}
+
+div.image-5 {
+    background-image: url("assets/wine.jpg");
+}
+
+
 .text {
     margin: auto;   
 }
@@ -237,7 +246,7 @@ div.image-3 {
 }
 
 form {
-    margin: 20px;
+    padding: 20px;
 }
 
 /* Style inputs with type="text", select elements and textareas */
