--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,8 @@ div.image-5 {
     margin: auto;   
 }
 
+
+
 .text h1 {
     font-size: 4rem;
     text-transform: uppercase;
@@ -145,6 +147,10 @@ div.image-5 {
 
 .text button {
     margin-top: 20px;
+}
+
+.text button {
+    margin-right: 20px!important;
 }
 
 .coloured-bar {
@@ -182,6 +188,7 @@ div.image-5 {
     padding: 10px 0;
 }
 .card p {
+    font-size: 1.2rem;
     margin-top: 4rem;
 }
 
@@ -321,6 +328,15 @@ input[type=text], select, textarea {
         display: block;
         cursor: pointer;
     }
+
+    .coloured-bar h1,
+    .text h1 {
+        font-size: 3rem;
+    }
+
+    .text:first-of-type button:last-of-type {
+        margin-left: 0;
+    }
     
     section {
       display: block;
@@ -349,7 +365,7 @@ input[type=text], select, textarea {
     }
 
     .info-section h2 {
-        font-size: 4rem;
+        font-size: 3rem;
     }
     .footer-section {
         flex-direction: column-reverse;
@@ -357,6 +373,12 @@ input[type=text], select, textarea {
 
     .footer-section h2 {
         font-size: 2rem;
+    }
+
+    .footer-section article:first-of-type {
+        margin-top: 20px;
+        text-align: center;
+
     }
 
     .weekly-specials .card {
