added smaller boxes for weekly specials

--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,6 @@ a {
     color: var(--black);
 }
 
-
-
 header {
     display: flex;
     background: var(--green);
@@ -50,8 +48,6 @@ header ul {
     color: var(--cream);
     font-size: 18px;
 }
-
-
 .hamburger {
     box-shadow: none;
 }
@@ -97,10 +93,6 @@ section div {
     width: 70%;
   }
 
-/* section:nth-child(2) {
-    flex-direction: row-reverse;
-  } */
-
 div.full-image {
     height: 100vh;
     background-size: cover;
@@ -126,12 +118,13 @@ div.image-5 {
     background-image: url("assets/wine.jpg");
 }
 
-
 .text {
     margin: auto;   
 }
 
-
+.header-bar {
+    background: var(--green);
+}
 
 .text h1 {
     font-size: 4rem;
@@ -176,10 +169,13 @@ div.image-5 {
     position: relative;
     top: -85px;
     background: white;
-    width: 238px;
     border: 6px solid var(--black);
     text-align: center;
     box-shadow: 8px 10px var(--cream);
+    height: 280px;
+    max-width: 350px;
+    margin: 0 20px;
+    transition: 0.4s;
 }
 .card h2 {
     background-color: var(--green);
@@ -188,13 +184,13 @@ div.image-5 {
     padding: 10px 0;
 }
 .card p {
-    font-size: 1.8rem;
-    margin-top: 4rem;
+    font-size: 1.2rem; 
+    margin-top: 3rem;
+    padding: 0 20px;
 }
 
 .card h3 {
-    font-size: 5rem;
-    margin-top: 4rem;
+    font-size: 3rem;
 }
 
 .info-section {
@@ -281,26 +277,26 @@ input[type=text], select, textarea {
 
 
 @media (max-width: 800px) {
-    body {
-      font-size: 16px;
-    }
-
+    
     header {
         padding: 8px 15px;
     }
-
+    
     h1 {
-        font-size: 3rem;
+        font-size: 2rem;
     }
     
     h2 {
-      font-size: 18px;
+        font-size: 1.4rem;
     }
-
+    
     .desktop-ul {
         display: none;
     }
     
+    .text p {
+      font-size: 16px;
+    }
     
     .nav-ul {
         font-size: 2rem;
@@ -330,12 +326,11 @@ input[type=text], select, textarea {
 
    header .hamburger {
         display: block;
-        cursor: pointer;
     }
 
     .coloured-bar h1,
     .text h1 {
-        font-size: 3rem;
+        font-size: 2rem;
     }
 
     .text:first-of-type button:last-of-type {
@@ -352,7 +347,7 @@ input[type=text], select, textarea {
     
     section div.text,
     .footer-section {
-      padding: 30px;
+      padding: 10px 20px 30px 20px;
     }
 
     article div.text {
@@ -360,16 +355,43 @@ input[type=text], select, textarea {
       }
 
     .weekly-specials {
-        flex-direction: column;
-        align-items: center;
+        padding: 0 15px;
+        flex-wrap: wrap;
     }
+
+    .card{
+        max-width: 578px;
+        margin: 20px 0;
+        top: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 10px;
+        align-items: center;
+        height: auto;
+    }
+
+    .card h2 {
+        padding: 15px;
+    }
+
+    .card h3 {
+        font-size: 2.8rem;
+        margin-right: 10px;
+    }  
+
+    .card p {
+        font-size: 1rem;
+        margin-top: 0; 
+        padding: 5px;
+
+    }  
 
     .info-section {
         display: block;
     }
 
     .info-section h2 {
-        font-size: 3rem;
+        font-size: 2rem;
     }
     .footer-section {
         flex-direction: column-reverse;
@@ -382,19 +404,18 @@ input[type=text], select, textarea {
     .footer-section article:first-of-type {
         margin-top: 20px;
         text-align: center;
-
-    }
-
-    .weekly-specials .card {
-        margin-bottom: 20px;
-    }
-
-    .weekly-specials .text {
-        text-align: center;
     }
     
     div.full-image {
-      height: 100vw;
+      height: 50vw;
+     }
+
+    .about-us {
+        display: none;
+    }
+
+     .full-image.image-2 {
+         display: none;
      }
 
      .footer-section article:last-of-type {
